# IaDuCrewwwww

leprojet/: README.md  pyproject.toml  report.md  training_data.pkl
leprojet/src/leprojet/: crew.py  main.py
leprojet/src/leprojet/config/: agents.yaml  tasks.yaml
