[project]
name = "leprojet"
version = "0.1.0"
description = "LeProjet using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
leprojet = "leprojet.main:run"
run_crew = "leprojet.main:run"
train = "leprojet.main:train"
replay = "leprojet.main:replay"
test = "leprojet.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
